Added Java opts environment variable, and mounted /tmp